# re_transformers

./: README.md  pyproject.toml  requirements.txt
example/: albert.py
example/integrations/: huggingface_kernel.py
example/models/: albert.py  qwen3.py
src/re_transformers/: __init__.py  modeling_outputs.py  modeling_rope_utils.py
src/re_transformers/models/albert/: configuration_albert.py  modeling_albert.py
src/re_transformers/models/qwen3/: modeling_qwen3.py
src/re_transformers/models/qwen3_5/: modeling_qwen3_5.py
test/re_transformers/models/albert/: test_modeling_albert.py
