[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "re_transformers"
version = "0.1.0"
description = "Re-implementation of Transformers from scratch"
authors = [{ name = "Cheng Fei" }]
readme = "README.md"
dependencies = ["torch", "numpy"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
