[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "re_transformers"
version = "0.1.0"
description = "Re-implementation of Transformers from scratch"
authors = [{ name = "Cheng Fei" }]
readme = "README.md"
dependencies = [
    "kernels>=0.10.2,<0.11",
    "numpy",
    "tensorflow",
    "torch",
    "transformers",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["test"]
pythonpath = ["src"]
addopts = ["-ra", "--strict-markers"]
python_files = ["test_*.py"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
